# beast-bot

./: .gitignore  Makefile  README.md  docker-compose.phase1.yml  docker-compose.yml  requirements.txt  sub_test.py
bench/: json_vs_orjson.py
config/: .env.example  mexc.yaml  secrets.example.env
infra/: nats_server.conf  prometheus.yml
ingest/: check_config.py  check_imports.py  mexc_ws_orch.py  nats_client.py  sample_feed.jsonl
ingest/hot_ingest/: Cargo.toml
ingest/hot_ingest/src/: main.rs
scripts/: create_nats_streams.py  smoke_orjson.py  smoke_uvloop.py
