[package]
name = "hot_ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
async-nats = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
anyhow = "1.0"
futures = "0.3"
clap = { version = "4.2", features = ["derive"] }
url = "2.5" # This was the missing dependency
